caja-property-browser(backgrounds and emblems): fix invisible text

--- a/UbuntuStudio_Legacy/gtk-3.20/apps/apps.css
+++ b/UbuntuStudio_Legacy/gtk-3.20/apps/apps.css
@@ -136,6 +136,12 @@ window.background>box>box>box>scrolledwindow>viewport.frame {
 	outline-color: alpha(@theme_selected_bg_color, 0.4);
 }
 
+/*Backgrounds and Emblems dialog text*/
+
+.caja-property-browser viewport>widget label{
+	color: black;
+}
+
 /***************************
 		* Nemo *
 
